test/chapter2/number.dart
void main() {
  // 数值类型 num 又可以细分为 int 和 double
  num a = 10;
  a = 12.5;

  int b = 1;
  // b = 1.1; // error

  double c = 1.11;
  // c = 20;
}